# komec

./: Cargo.toml  README.md  all_syntax.kome  build.rs  license  readme.md  risou.kome  todo.md
crates/kome_ast/: Cargo.toml  all_syntax.kome
crates/kome_ast/examples/: demo.rs
crates/kome_ast/src/: declarations.rs  expressions.rs  lib.rs  patterns.rs  statements.rs  types.rs
crates/kome_lsp/: Cargo.toml
crates/kome_lsp/src/: diagnostics.rs  lib.rs  main.rs  position.rs
crates/kome_lsp/tests/: diagnostics.rs  positiron.rs
crates/kome_parser/: Cargo.toml
crates/kome_semantics/: Cargo.toml
crates/mochi_ast/: Cargo.toml
crates/mochi_parser/: Cargo.toml
docs/: about.md  ast.md
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/zed/: .gitignore  Cargo.toml  Makefile  config.toml  extension.toml  highlights.scm
examples/: bool_none.kome  bundle.kome  coalesce.kome  coalesce_int.kome  dock.kome  draw_card.kome  if_expr.kome  isnt_mut.kome  match.kome  return_reachability_ng.kome  return_reachability_ok.kome  risou.kome  short_circuit.kome  state.kome  state_noMain.kome  state_simple.kome  test.kome  test_main_simple.kome
lib/toml/: module.kome
lib/user/: Cargo.toml
lib/viewKit/: module.kome  viewkit.h  viewkit_shim.c
src/: ast.rs  codegen.rs  library.rs  main.rs  state.rs  typecheck.rs
src/syntax/: main.pest
std/: bundle.c  bundle.h  bundle.kome  objects.c  objects.h  runtime.c  runtime.h  std.h  std_util.c  toml.h
std/fs/: fs.h  module.kome
std/io/: keyboard.c  keyboard.h  keyboard.kome  module.kome  printfv.c  printfv.h
std/process/: module.kome  process.c  process.h
std/runtime/: module.kome
std/string/: concat.c  concat.h  module.kome
(+64 files in other folders)
