[package]
name = "Kome"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "komec"
path = "src/main.rs"
test = false
bench = false

[dependencies]
inkwell = {  version = "0.9.0", features = ["llvm22-1"] }
pest = "2.8.6"
pest_derive = "2.8.6"
clang = "2.0.0"
log = "0.4.29"
env_logger = "0.11.10"
lazy_static = "1.5.0"
libc = "0.2"
viewkit = { path = "lib/viewKit/source", features = ["wayland"] }

[build-dependencies]
cc = "1.0"
walkdir = "2.3"
