[package]
name = "komec"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "crates/kome_ast",
  "crates/kome_lsp",
  "crates/kome_parser",
  "crates/kome_semantics",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
kome_ast = { path = "crates/kome_ast" }
kome_parser = { path = "crates/kome_parser" }
kome_semantics = { path = "crates/kome_semantics" }
[dependencies]
