[package]
name = "kome_lsp"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "kome-lsp"
path = "src/main.rs"

[dependencies]
kome_ast.workspace = true
kome_parser.workspace = true
kome_semantics.workspace = true

tokio = {
  version = "1",
  features = [
    "io-std",
    "macros",
    "rt-multi-thread",
  ],
}

tower-lsp = "0.20"
